# pass_copier

./: CMakeLists.txt  README  app.rc  main.cpp  passcopier.desktop  setup.iss
.github/workflows/: check.yml  main.yml
debian/: changelog  control  rules
